# slm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  spec.md
data/dataset_v1/: stats.json
data/dataset_v2/: stats.json
data/vocab/: SOURCES.md  sample_en.csv
docs/: COLAB_PLAN.md  DATASET_V2_PILOT.md  DATA_CARD.md  DAY1.md  DAY2.md  DAY3.md  DEMO_SCRIPT.md  ERROR_ANALYSIS.md  EVALUATION.md  GOLDEN_SET.md  PRD.md  SUBMISSION.md  TRAINING.md  brainlift.md  dataset-and-eval.md  design-constraints.md  more_notes.txt
evals/: BASE_VS_BEST.md  LEADERBOARD.md  OVERNIGHT_PLAN.md  RESULTS_LOG.md  runs.jsonl
evals/baseline/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/baseline_exam/: results_en.json  results_en.md
evals/calibration/: scores.example.json
evals/colab_golden/: results_golden_en.json  results_golden_en.md  results_golden_ja.json  results_golden_ja.md  results_golden_zh.json  results_golden_zh.md
evals/colab_heldout/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/day2/: results_en.json  results_en.md
evals/day3/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/day3_v3/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/day3_v3_exam/: results_en.json  results_en.md
evals/day3_v3_judged/: results_en.json  results_en.md
evals/day3_v5_exam_judged/: results_en.json  results_en.md
evals/day3_v5_judged/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/day3_v6_exam_judged/: results_en.json  results_en.md
evals/day3_v6_judged/: results_en.json  results_en.md  results_ja.json  results_ja.md  results_zh.json  results_zh.md
evals/golden/: coverage.md  golden.jsonl  golden_report.json
evals/golden_v5/: results_golden_en.json  results_golden_en.md  results_golden_ja.json  results_golden_ja.md  results_golden_zh.json  results_golden_zh.md
evals/golden_v6/: results_golden_en.json  results_golden_en.md  results_golden_ja.json  results_golden_ja.md  results_golden_zh.json  results_golden_zh.md
evals/golden_v7/: results_golden_en.json  results_golden_en.md  results_golden_ja.json  results_golden_ja.md  results_golden_zh.json  results_golden_zh.md
evals/scenarios/: adversarial_en.jsonl  adversarial_ja.jsonl  adversarial_zh.jsonl  heldout.jsonl  heldout_en.jsonl  heldout_exam_en.jsonl  heldout_ja.jsonl  heldout_small_en.jsonl  heldout_small_ja.jsonl  heldout_small_zh.jsonl  heldout_zh.jsonl
evals/v2_golden/: results_golden_en.json  results_golden_en.md  results_golden_ja.json  results_golden_ja.md  (+2 more)
notebooks/: README.md  demo_colab.ipynb  train_colab.ipynb  train_colab_v2.ipynb  train_colab_v2_multi.ipynb
scripts/: author_cjk.py  publish_hf.py  try_model.py  try_prompt.py
tests/: test_calibration.py  test_curate.py  test_eval.py  test_golden.py  test_langsmith_sync.py  test_lemmatize.py  test_multilingual.py  test_pipeline_smoke.py  test_replay.py  test_synth.py  test_teacher.py  test_tokenize.py  test_track.py  test_train.py  test_validators.py  test_wordlist_evals.py
(+71 files in other folders)
